--- a/HP.css
+++ b/HP.css
@@ -7,8 +7,11 @@ text-align: center;
   border: solid 20px #1f1f1f;
   line-height: 180px;
   float: inline-start;
+  width:100%;
+  height: 100%;
  
 }
+
 
 h1 {
   color: white;
